--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
                 <h2 class="title">Новости</h2>
                 <div class="news__inner">
                     <div class="news__item">
-                        <img class="news__img" src="./images/news-1.jpg" alt="Новость">
-                        <p class="news__desc">Международный день школьных библиотек</p>
+                        <div class="news__box">
+                            <img class="news__img" src="./images/news-1.jpg" alt="Новость">
+                            <h3 class="news__desc">Международный день школьных библиотек</h3>
+                        </div>
                         <p class="news__text">
                             Каждый четвёртый понедельник октября весь мир отмечает Международный день школьных
                             библиотек. Это повод вспомнить о людях, преданных Слову и Книге.
@@ -100,19 +102,25 @@
                         <a class="news__link" href="#">Подробнее</a>
                     </div>
                     <div class="news__item">
-                        <img class="news__img" src="./images/news-1.jpg" alt="Новость">
-                        <p class="news__desc">Международный день школьных библиотек</p>
+                        <div class="news__box">
+                            <img class="news__img" src="./images/news-1.jpg" alt="Новость">
+                            <h3 class="news__desc">Международный день школьных библиотек</h3>
+                        </div>
                         <p class="news__text">
                             Каждый четвёртый понедельник октября весь мир отмечает Международный день школьных
-                            библиотек. Это повод вспомнаждый четвёртый понедельник октября весь мир отмечает Международный день школьных
-                            библиотек. Это повод вспомнитьаждый четвёртый понедельник октября весь мир отмечает Международный день школьных
+                            библиотек. Это повод вспомнаждый четвёртый понедельник октября весь мир отмечает
+                            Международный день школьных
+                            библиотек. Это повод вспомнитьаждый четвёртый понедельник октября весь мир отмечает
+                            Международный день школьных
                             библиотек. Это повод вспомнитьить о людях, преданных Слову и Книге.
                         </p>
                         <a class="news__link" href="#">Подробнее</a>
                     </div>
                     <div class="news__item">
-                        <img class="news__img" src="./images/news-1.jpg" alt="Новость">
-                        <p class="news__desc">Международный день школьных библиотек</p>
+                        <div class="news__box">
+                            <img class="news__img" src="./images/news-1.jpg" alt="Новость">
+                            <h3 class="news__desc">Международный день школьных библиотек</h3>
+                        </div>
                         <p class="news__text">
                             Каждый четвёртый понедельник октября весь мир отмечает Международный день школьных
                             библиотек. Это повод вспомнить о людях, преданных Слову и Книге.
@@ -122,7 +130,6 @@
                 </div>
             </div>
         </section>
-
     </main>
 
     <footer class="footer">
