--- a/news-page.html
+++ b/news-page.html
@@ -86,12 +86,16 @@
                                 «Любинская СОШ № 3» организована выставка, посвящённая этому празднику.
                             </p>
                         </div>
-                        <img class="article__img" src="./images/news-page-1.jpg" alt="Новость">  
+                        <div class="article__img-box">
+                            <img class="article__img" src="./images/news-page-1.jpg" alt="Новость">
+                        </div>
                     </div>
                     <div class="article__item">
-                        <img class="article__img" src="./images/news-page-2.jpg" alt="Новость">
-                        <div class="article__item-left">
-                            <p class="article__text">
+                        <div class="article__img-box">
+                            <img class="article__img" src="./images/news-page-2.jpg" alt="Новость">
+                        </div>
+                        <div class="article__item-left text-left">
+                            <p class="article__text ">
                                 Каждый четвёртый понедельник октября весь мир отмечает Международный день школьных
                                 библиотек. Это повод вспомнить о людях, преданных Слову и Книге. В школьной библиотеке
                                 МБОУ
